// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav NavSearch renders search icon for mobile 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
      shrink={false}
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="0"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="1"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
    <NavItem
      className="class navItem--searchIcon"
      icon="icon"
      key="2"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
  <div
    className=""
    style={
      Object {
        "maxHeight": 0,
        "opacity": 0,
        "overflow": "hidden",
        "paddingTop": 0,
        "transition": "max-height .2s ease-out, opacity .1s ease-in-out, padding .1s ease-in-out",
      }
    }
  >
    <NavbarSearchComponent
      isNewNavActive={false}
      style={
        Object {
          "height": 44,
        }
      }
    />
  </div>
</nav>
`;

exports[`Nav NavSearch renders search input for desktop 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
      shrink={true}
    />
    <FlexItem>
      <NavbarSearchComponent
        style={
          Object {
            "height": 44,
            "maxWidth": 500,
          }
        }
      />
    </FlexItem>
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="1"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="2"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for authenticated large screens 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="0"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="messages"
          size="s"
        />
      }
      key="1"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="notifications"
          size="s"
        />
      }
      key="2"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="3"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for authenticated medium screens 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--swarm align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="48px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem"
      icon={
        <div
          className="tryProIcon tw-text-white tw-bg-viridian tw-px-1 tw-py-0.5 tw-rounded tw-font-semibold tw-text-xs"
        >
          PRO
        </div>
      }
      isTargetBlank={true}
      key="2"
      label="Try for free"
      labelClassName="navItem-label-pro navItem--authenticated"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/lp/meetup-pro/?fromUpgrade=true&utm_medium=display&utm_source=meetup&utm_content=lp_pro&utm_campaign=meetup_orgeng_c2p_pro"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProMessages"
      hasUpdates={true}
      icon={
        <img
          alt="Messages"
          className="proIcon"
          src=""
        />
      }
      key="3"
      label="Messages"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProNotifications"
      hasUpdates={false}
      icon={
        <img
          alt="Notifications"
          className="proIcon"
          src=""
        />
      }
      key="4"
      label="Notifications"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      dropdownContent={
        <ProfileDropdownComponent
          allGroupsLabel="See all groups"
          allGroupsLink="meetup.com/groups"
          groupHome={[Function]}
          groups={
            Array [
              Object {
                "name": "Mason Mocks",
                "urlname": "/mason-mocks",
              },
              Object {
                "name": "Chicken Scratch",
                "urlname": "/chicken-scratch",
              },
            ]
          }
          help={
            Object {
              "label": "Help",
              "link": "meetup.com/help",
            }
          }
          logout={
            Object {
              "label": "Logout",
              "link": "meetup.com/logout",
            }
          }
          payments={
            Object {
              "label": "Payments made",
              "link": "meetup.com/payments/payments_made",
            }
          }
          profile={
            Object {
              "getSelfGroupsQuery": [Function],
              "label": "Profile",
              "link": "meetup.com/profile",
              "profileDropdown": Object {
                "allGroupsLabel": "See all groups",
                "allGroupsLink": "meetup.com/groups",
                "groupHome": [Function],
                "help": Object {
                  "label": "Help",
                  "link": "meetup.com/help",
                },
                "logout": Object {
                  "label": "Logout",
                  "link": "meetup.com/logout",
                },
                "payments": Object {
                  "label": "Payments made",
                  "link": "meetup.com/payments/payments_made",
                },
                "savedEvents": Object {
                  "label": "Saved events",
                  "link": "meetup.com/saved-events",
                },
                "settings": Object {
                  "label": "Settings",
                  "link": "meetup.com/settings",
                },
                "yourEvents": Object {
                  "label": "Your events",
                  "link": "meetup.com/your-events",
                },
                "yourGroups": Object {
                  "label": "Your groups",
                  "link": "meetup.com/groups",
                },
              },
            }
          }
          savedEvents={
            Object {
              "label": "Saved events",
              "link": "meetup.com/saved-events",
            }
          }
          settings={
            Object {
              "label": "Settings",
              "link": "meetup.com/settings",
            }
          }
          yourEvents={
            Object {
              "label": "Your events",
              "link": "meetup.com/your-events",
            }
          }
          yourGroups={
            Object {
              "label": "Your groups",
              "link": "meetup.com/groups",
            }
          }
        />
      }
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              medium={true}
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="5"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo=""
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for authenticated medium screens and new nav 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--swarm align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="48px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      isNewNavActive={true}
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      isNewNavActive={true}
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem"
      icon={
        <div
          className="tryProIcon tw-text-white tw-bg-viridian tw-px-1 tw-py-0.5 tw-rounded tw-font-semibold tw-text-xs"
        >
          PRO
        </div>
      }
      isNewNavActive={true}
      isTargetBlank={true}
      key="2"
      label="Try for free"
      labelClassName="navItem-label-pro navItem--authenticated"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/lp/meetup-pro/?fromUpgrade=true&utm_medium=display&utm_source=meetup&utm_content=lp_pro&utm_campaign=meetup_orgeng_c2p_pro"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProMessages"
      hasUpdates={true}
      icon={
        <img
          alt="Messages"
          className="proIcon"
          src=""
        />
      }
      isNewNavActive={true}
      key="3"
      label="Messages"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProNotifications"
      hasUpdates={false}
      icon={
        <img
          alt="Notifications"
          className="proIcon"
          src=""
        />
      }
      isNewNavActive={true}
      key="4"
      label="Notifications"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      dropdownContent={
        <ProfileDropdownComponent
          allGroupsLabel="See all groups"
          allGroupsLink="meetup.com/groups"
          groupHome={[Function]}
          groups={
            Array [
              Object {
                "name": "Mason Mocks",
                "urlname": "/mason-mocks",
              },
              Object {
                "name": "Chicken Scratch",
                "urlname": "/chicken-scratch",
              },
            ]
          }
          help={
            Object {
              "label": "Help",
              "link": "meetup.com/help",
            }
          }
          isNewNavActive={true}
          logout={
            Object {
              "label": "Logout",
              "link": "meetup.com/logout",
            }
          }
          payments={
            Object {
              "label": "Payments made",
              "link": "meetup.com/payments/payments_made",
            }
          }
          profile={
            Object {
              "getSelfGroupsQuery": [Function],
              "label": "Profile",
              "link": "meetup.com/profile",
              "profileDropdown": Object {
                "allGroupsLabel": "See all groups",
                "allGroupsLink": "meetup.com/groups",
                "groupHome": [Function],
                "help": Object {
                  "label": "Help",
                  "link": "meetup.com/help",
                },
                "logout": Object {
                  "label": "Logout",
                  "link": "meetup.com/logout",
                },
                "payments": Object {
                  "label": "Payments made",
                  "link": "meetup.com/payments/payments_made",
                },
                "savedEvents": Object {
                  "label": "Saved events",
                  "link": "meetup.com/saved-events",
                },
                "settings": Object {
                  "label": "Settings",
                  "link": "meetup.com/settings",
                },
                "yourEvents": Object {
                  "label": "Your events",
                  "link": "meetup.com/your-events",
                },
                "yourGroups": Object {
                  "label": "Your groups",
                  "link": "meetup.com/groups",
                },
              },
            }
          }
          savedEvents={
            Object {
              "label": "Saved events",
              "link": "meetup.com/saved-events",
            }
          }
          settings={
            Object {
              "label": "Settings",
              "link": "meetup.com/settings",
            }
          }
          yourEvents={
            Object {
              "label": "Your events",
              "link": "meetup.com/your-events",
            }
          }
          yourGroups={
            Object {
              "label": "Your groups",
              "link": "meetup.com/groups",
            }
          }
        />
      }
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              medium={true}
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      isNewNavActive={true}
      key="5"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo=""
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for authenticated pro admins 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="navItem--authenticated atMedium_display--block navItemLink--dashboard"
      icon={
        <Flex
          align="center"
          noGutters={true}
        >
          <FlexItem>
            <Avatar
              alt="Avatar"
              className="display--block margin--left circular atMedium_display--none"
              small={true}
              src="https://placeimg.com/640/480/any"
            />
          </FlexItem>
          <FlexItem
            className="display--block atMedium_display--none"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="0"
      labelClassName=""
      linkClassName=""
      linkTo=""
      onAction={[Function]}
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="messages"
          size="s"
        />
      }
      key="2"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="notifications"
          size="s"
        />
      }
      key="3"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups display--none"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "is_pro_admin": true,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="4"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for authenticated small screens and new nav 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      isNewNavActive={true}
      key="0"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block"
          shape="messages"
          size="s"
        />
      }
      isNewNavActive={true}
      key="1"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block"
          shape="notifications"
          size="s"
        />
      }
      isNewNavActive={true}
      key="2"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      isNewNavActive={true}
      key="3"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for groups loading state 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": undefined,
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--swarm align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="48px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem"
      icon={
        <div
          className="tryProIcon tw-text-white tw-bg-viridian tw-px-1 tw-py-0.5 tw-rounded tw-font-semibold tw-text-xs"
        >
          PRO
        </div>
      }
      isTargetBlank={true}
      key="2"
      label="Try for free"
      labelClassName="navItem-label-pro navItem--authenticated"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/lp/meetup-pro/?fromUpgrade=true&utm_medium=display&utm_source=meetup&utm_content=lp_pro&utm_campaign=meetup_orgeng_c2p_pro"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProMessages"
      hasUpdates={true}
      icon={
        <img
          alt="Messages"
          className="proIcon"
          src=""
        />
      }
      key="3"
      label="Messages"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProNotifications"
      hasUpdates={false}
      icon={
        <img
          alt="Notifications"
          className="proIcon"
          src=""
        />
      }
      key="4"
      label="Notifications"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      dropdownContent={
        <ProfileDropdownComponent
          allGroupsLabel="See all groups"
          allGroupsLink="meetup.com/groups"
          groupHome={[Function]}
          groups={
            Array [
              Object {
                "name": "Mason Mocks",
                "urlname": "/mason-mocks",
              },
              Object {
                "name": "Chicken Scratch",
                "urlname": "/chicken-scratch",
              },
            ]
          }
          help={
            Object {
              "label": "Help",
              "link": "meetup.com/help",
            }
          }
          logout={
            Object {
              "label": "Logout",
              "link": "meetup.com/logout",
            }
          }
          payments={
            Object {
              "label": "Payments made",
              "link": "meetup.com/payments/payments_made",
            }
          }
          profile={
            Object {
              "getSelfGroupsQuery": [Function],
              "label": "Profile",
              "link": "meetup.com/profile",
              "profileDropdown": Object {
                "allGroupsLabel": "See all groups",
                "allGroupsLink": "meetup.com/groups",
                "groupHome": [Function],
                "help": Object {
                  "label": "Help",
                  "link": "meetup.com/help",
                },
                "logout": Object {
                  "label": "Logout",
                  "link": "meetup.com/logout",
                },
                "payments": Object {
                  "label": "Payments made",
                  "link": "meetup.com/payments/payments_made",
                },
                "savedEvents": Object {
                  "label": "Saved events",
                  "link": "meetup.com/saved-events",
                },
                "settings": Object {
                  "label": "Settings",
                  "link": "meetup.com/settings",
                },
                "yourEvents": Object {
                  "label": "Your events",
                  "link": "meetup.com/your-events",
                },
                "yourGroups": Object {
                  "label": "Your groups",
                  "link": "meetup.com/groups",
                },
              },
            }
          }
          savedEvents={
            Object {
              "label": "Saved events",
              "link": "meetup.com/saved-events",
            }
          }
          settings={
            Object {
              "label": "Settings",
              "link": "meetup.com/settings",
            }
          }
          yourEvents={
            Object {
              "label": "Your events",
              "link": "meetup.com/your-events",
            }
          }
          yourGroups={
            Object {
              "label": "Your groups",
              "link": "meetup.com/groups",
            }
          }
        />
      }
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              medium={true}
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="5"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo=""
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for notifications loading state 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  notifications={
    Object {
      "label": "Notifications",
      "link": "meetup.com/notifications",
      "list": undefined,
      "unreadNotifications": 0,
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--swarm align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="48px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem"
      icon={
        <div
          className="tryProIcon tw-text-white tw-bg-viridian tw-px-1 tw-py-0.5 tw-rounded tw-font-semibold tw-text-xs"
        >
          PRO
        </div>
      }
      isTargetBlank={true}
      key="2"
      label="Try for free"
      labelClassName="navItem-label-pro navItem--authenticated"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/lp/meetup-pro/?fromUpgrade=true&utm_medium=display&utm_source=meetup&utm_content=lp_pro&utm_campaign=meetup_orgeng_c2p_pro"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProMessages"
      hasUpdates={true}
      icon={
        <img
          alt="Messages"
          className="proIcon"
          src=""
        />
      }
      key="3"
      label="Messages"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProNotifications"
      hasUpdates={false}
      icon={
        <img
          alt="Notifications"
          className="proIcon"
          src=""
        />
      }
      key="4"
      label="Notifications"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      dropdownContent={
        <ProfileDropdownComponent
          allGroupsLabel="See all groups"
          allGroupsLink="meetup.com/groups"
          groupHome={[Function]}
          groups={
            Array [
              Object {
                "name": "Mason Mocks",
                "urlname": "/mason-mocks",
              },
              Object {
                "name": "Chicken Scratch",
                "urlname": "/chicken-scratch",
              },
            ]
          }
          help={
            Object {
              "label": "Help",
              "link": "meetup.com/help",
            }
          }
          logout={
            Object {
              "label": "Logout",
              "link": "meetup.com/logout",
            }
          }
          payments={
            Object {
              "label": "Payments made",
              "link": "meetup.com/payments/payments_made",
            }
          }
          profile={
            Object {
              "getSelfGroupsQuery": [Function],
              "label": "Profile",
              "link": "meetup.com/profile",
              "profileDropdown": Object {
                "allGroupsLabel": "See all groups",
                "allGroupsLink": "meetup.com/groups",
                "groupHome": [Function],
                "help": Object {
                  "label": "Help",
                  "link": "meetup.com/help",
                },
                "logout": Object {
                  "label": "Logout",
                  "link": "meetup.com/logout",
                },
                "payments": Object {
                  "label": "Payments made",
                  "link": "meetup.com/payments/payments_made",
                },
                "savedEvents": Object {
                  "label": "Saved events",
                  "link": "meetup.com/saved-events",
                },
                "settings": Object {
                  "label": "Settings",
                  "link": "meetup.com/settings",
                },
                "yourEvents": Object {
                  "label": "Your events",
                  "link": "meetup.com/your-events",
                },
                "yourGroups": Object {
                  "label": "Your groups",
                  "link": "meetup.com/groups",
                },
              },
            }
          }
          savedEvents={
            Object {
              "label": "Saved events",
              "link": "meetup.com/saved-events",
            }
          }
          settings={
            Object {
              "label": "Settings",
              "link": "meetup.com/settings",
            }
          }
          yourEvents={
            Object {
              "label": "Your events",
              "link": "meetup.com/your-events",
            }
          }
          yourGroups={
            Object {
              "label": "Your groups",
              "link": "meetup.com/groups",
            }
          }
        />
      }
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              medium={true}
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="5"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo=""
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for unauthenticated large screens 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="0"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="1"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="0"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="messages"
          size="s"
        />
      }
      key="1"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="notifications"
          size="s"
        />
      }
      key="2"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="3"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 2`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="1"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="2"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for unauthenticated small screens 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="44px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="0"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="1"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot for unread notifications 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  notifications={
    Object {
      "label": "Notifications",
      "link": "meetup.com/notifications",
      "list": Array [],
      "unreadNotifications": 3,
    }
  }
  role="navigation"
>
  <Flex
    align="center"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--swarm align--left"
      icon={
        <img
          alt="Meetup Logo"
          height="48px"
          src=""
        />
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItemLink--createMeetup"
      key="0"
      label="Start a new group"
      linkTo="meetup.com/start"
      shrink={true}
    />
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="1"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem"
      icon={
        <div
          className="tryProIcon tw-text-white tw-bg-viridian tw-px-1 tw-py-0.5 tw-rounded tw-font-semibold tw-text-xs"
        >
          PRO
        </div>
      }
      isTargetBlank={true}
      key="2"
      label="Try for free"
      labelClassName="navItem-label-pro navItem--authenticated"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/lp/meetup-pro/?fromUpgrade=true&utm_medium=display&utm_source=meetup&utm_content=lp_pro&utm_campaign=meetup_orgeng_c2p_pro"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProMessages"
      hasUpdates={true}
      icon={
        <img
          alt="Messages"
          className="proIcon"
          src=""
        />
      }
      key="3"
      label="Messages"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName="navItem--counterBadgeProNotifications"
      hasUpdates={false}
      icon={
        <img
          alt="Notifications"
          className="proIcon"
          src=""
        />
      }
      key="4"
      label="Notifications"
      labelClassName="navItem-label-pro"
      linkClassName="navItemLink-pro"
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      dropdownContent={
        <ProfileDropdownComponent
          allGroupsLabel="See all groups"
          allGroupsLink="meetup.com/groups"
          groupHome={[Function]}
          groups={
            Array [
              Object {
                "name": "Mason Mocks",
                "urlname": "/mason-mocks",
              },
              Object {
                "name": "Chicken Scratch",
                "urlname": "/chicken-scratch",
              },
            ]
          }
          help={
            Object {
              "label": "Help",
              "link": "meetup.com/help",
            }
          }
          logout={
            Object {
              "label": "Logout",
              "link": "meetup.com/logout",
            }
          }
          payments={
            Object {
              "label": "Payments made",
              "link": "meetup.com/payments/payments_made",
            }
          }
          profile={
            Object {
              "getSelfGroupsQuery": [Function],
              "label": "Profile",
              "link": "meetup.com/profile",
              "profileDropdown": Object {
                "allGroupsLabel": "See all groups",
                "allGroupsLink": "meetup.com/groups",
                "groupHome": [Function],
                "help": Object {
                  "label": "Help",
                  "link": "meetup.com/help",
                },
                "logout": Object {
                  "label": "Logout",
                  "link": "meetup.com/logout",
                },
                "payments": Object {
                  "label": "Payments made",
                  "link": "meetup.com/payments/payments_made",
                },
                "savedEvents": Object {
                  "label": "Saved events",
                  "link": "meetup.com/saved-events",
                },
                "settings": Object {
                  "label": "Settings",
                  "link": "meetup.com/settings",
                },
                "yourEvents": Object {
                  "label": "Your events",
                  "link": "meetup.com/your-events",
                },
                "yourGroups": Object {
                  "label": "Your groups",
                  "link": "meetup.com/groups",
                },
              },
            }
          }
          savedEvents={
            Object {
              "label": "Saved events",
              "link": "meetup.com/saved-events",
            }
          }
          settings={
            Object {
              "label": "Settings",
              "link": "meetup.com/settings",
            }
          }
          yourEvents={
            Object {
              "label": "Your events",
              "link": "meetup.com/your-events",
            }
          }
          yourGroups={
            Object {
              "label": "Your groups",
              "link": "meetup.com/groups",
            }
          }
        />
      }
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              medium={true}
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="5"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo=""
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot with logo photo 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="0"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="messages"
          size="s"
        />
      }
      key="1"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="notifications"
          size="s"
        />
      }
      key="2"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="3"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav should match the snapshot without a logo photo 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="atMedium_display--none navItem--authenticated"
      icon={
        <Icon
          className="display--block"
          shape="groups"
          size="s"
        />
      }
      key="0"
      label="Groups"
      linkTo="meetup.com/groups"
      shrink={true}
    />
    <NavItem
      className="navItem--messages navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={true}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="messages"
          size="s"
        />
      }
      key="1"
      label="Messages"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/messages"
      shrink={true}
    />
    <NavItem
      className="navItem--notifications navItem--authenticated"
      counterBadgeClassName=""
      hasUpdates={false}
      icon={
        <Icon
          className="display--block atMedium_display--none"
          shape="notifications"
          size="s"
        />
      }
      key="2"
      label="Notifications"
      labelClassName=""
      linkClassName=""
      linkTo="meetup.com/notifications"
      shrink={true}
    />
    <NavItem
      className="navItem--authenticated profileDropdown profileDropdown--hasGroups"
      icon={
        <Flex
          align="center"
          aria-label="Profile"
          noGutters={true}
        >
          <FlexItem>
            <AvatarMember
              member={
                Object {
                  "id": 1243,
                  "name": "mocky mcmockerson",
                  "photo": Object {
                    "photo_link": "http://placekitten.com/g/400/400",
                    "thumb_link": "http://placekitten.com/g/200/200",
                  },
                }
              }
              small={true}
            />
          </FlexItem>
          <FlexItem
            className="display--none atMedium_display--block"
            shrink={true}
          >
            <Icon
              className="padding--halfLeft"
              id="profileChevronIcon"
              shape="chevron-down"
              size="xxs"
            />
          </FlexItem>
        </Flex>
      }
      key="3"
      label="Profile"
      labelClassName="navItem-label display--block atMedium_display--none"
      linkTo="meetup.com/profile"
      shrink={true}
    />
  </Flex>
</nav>
`;

exports[`Nav uxCapture renders the uxCapture markup when supplied prop 1`] = `
<nav
  aria-label="Header navigation"
  className="globalNav padding--all"
  groups={
    Object {
      "label": "Groups",
      "link": "meetup.com/groups",
      "list": Array [
        Object {
          "name": "Mason Mocks",
          "urlname": "/mason-mocks",
        },
        Object {
          "name": "Chicken Scratch",
          "urlname": "/chicken-scratch",
        },
      ],
    }
  }
  role="navigation"
>
  <Flex
    align="top"
    className="span--100 navBar"
    justify="spaceBetween"
  >
    <NavItem
      className="logo logo--script align--left"
      icon={
        <React.Fragment>
          <UXCaptureImageLoad
            alt="Meetup Logo"
            height="44px"
            mark="ux-image-onload-script-logo"
            src=""
          />
          <UXCaptureInlineMark
            mark="ux-image-inline-script-logo"
          />
        </React.Fragment>
      }
      linkClassName="display--inlineBlock"
      linkTo="meetup.com"
    />
    <NavItem
      className="navItem--unauthenticated navItem--login"
      key="0"
      label="Login"
      linkTo="meetup.com/login"
      shrink={true}
    />
    <NavItem
      className="navItem--unauthenticated navItem--signup"
      key="1"
      label="Sign up"
      onAction={[Function]}
      shrink={true}
    />
  </Flex>
</nav>
`;
